--- a/cam.yaml
+++ b/cam.yaml
@@ -1,34 +1,20 @@
-D =  [-0.33758562758914146, 0.11161239414304096, -0.00021819272592442094, -3.029195446330518e-05]
-K =  [430.21554970319971, 0.0, 306.6913434743704, 0.0, 430.53169252696676, 227.22480030078816, 0.0, 0.0, 1.0]
-R =  [1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0]
-P =  [1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]
-# oST version 5.0 parameters
-
-
-[image]
-
-width
-1280
-
-height
-960
-
-[narrow_stereo/left]
-
-camera matrix
-430.215550 0.000000 306.691343
-0.000000 430.531693 227.224800
-0.000000 0.000000 1.000000
-
-distortion
--0.337586 0.111612 -0.000218 -0.000030 0.0000
-
-rectification
-1.000000 0.000000 0.000000
-0.000000 1.000000 0.000000
-0.000000 0.000000 1.000000
-
-projection
-1.000000 0.000000 0.000000 0.000000
-0.000000 1.000000 0.000000 0.000000
-0.000000 0.000000 1.000000 0.000000
+image_width: 1280
+image_height: 720
+camera_name: ocam
+camera_matrix:
+  rows: 3
+  cols: 3
+  data: [4827.94, 0, 1223.5, 0, 4835.62, 1024.5, 0, 0, 1]
+distortion_model: plumb_bob
+distortion_coefficients:
+  rows: 1
+  cols: 5
+  data: [-0.41527, 0.31874, -0.00197, 0.00071, 0]
+rectification_matrix:
+  rows: 3
+  cols: 3
+  data: [1, 0, 0, 0, 1, 0, 0, 0, 1]
+projection_matrix:
+  rows: 3
+  cols: 4
+  data: [4827.94, 0, 1223.5, 0, 0, 4835.62, 1024.5, 0, 0, 0, 1, 0]
